cabal-version:       >=1.10
name:                coproducts
version:             0.1.0.0
license-file:        LICENSE
author:              Asad Saeeduddin
maintainer:          masaeedu@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  build-depends:       base >=4.12 && <4.13
  hs-source-dirs:      src
  exposed-modules:     Coproducts, Example1, Example2
  default-language:    Haskell2010
  default-extensions:
      DataKinds
    , KindSignatures
    , PolyKinds
    , ConstraintKinds

    , GADTs

    , TypeFamilies
    , MultiParamTypeClasses
    , FunctionalDependencies

    , StandaloneDeriving
    , DerivingVia
    , DeriveFunctor
    , GeneralizedNewtypeDeriving

    , RankNTypes
    , QuantifiedConstraints

    , FlexibleContexts
    , FlexibleInstances

    , ViewPatterns
    , TypeOperators
    , ScopedTypeVariables
    , InstanceSigs
    , LambdaCase
